--- a/Client.Avalonia/Containers/AreaSettingsContainer/StratumsList/StratumsList.axaml
+++ b/Client.Avalonia/Containers/AreaSettingsContainer/StratumsList/StratumsList.axaml
@@ -11,7 +11,7 @@
         <stratumsList:StratumsListViewModel />
     </Design.DataContext>
 
-    <Grid RowDefinitions="Auto *" Classes="m-2">
+    <Grid RowDefinitions="Auto *">
         <Button Grid.Row="0"
                 Classes="va-stretch ha-stretch hca-center"
                 Content="Добавить объект"
